--- a/hugo/assets/css/main.scss
+++ b/hugo/assets/css/main.scss
@@ -11,6 +11,7 @@ $yiq-contrasted-threshold: 200;
 
 /* Required Bootstrap components */
 $grid-gutter-width: 30px;
+$link-decoration: none;
 $container-max-widths: (
   sm: 540px,
   md: 720px,
